--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <body>
     <div class="container">
-        <h1>Time</h1>
+        <h1>Timer</h1>
         <div class="time">
             <div class="hours">00</div>
             <div class="minutes">00</div>
@@ -106,6 +106,8 @@
 
         start.addEventListener('click', () => {
             start.style.pointerEvents = 'none';
+            if(start.textContent === 'CONTINUE')
+                start.textContent = 'START'
             interId = setInterval(() => {
                 secTrack++;
                 if (secTrack == 60) {
@@ -128,12 +130,14 @@
             minutes.innerHTML = `${minTrack}m &nbsp;`
             seconds.innerHTML = `${secTrack}s`
             start.style.pointerEvents = 'all';
+            start.textContent = 'START'
             clearInterval(interId)
         })
 
         pause.addEventListener('click', () => {
             clearInterval(interId)
             start.style.pointerEvents = 'all';
+            start.textContent = 'CONTINUE'
         })
 
     </script>
