modified some things

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             background-image: url('./nature.jpg');
             background-size: 100%;
             color: white;
+            height: 100vh;
+            max-height: 500px;
         }
 
         .container {
@@ -28,7 +30,7 @@
             left: 50%;
             height: 50%;
             width: 50%;
-            padding-top: 50px;
+            padding: 50px 0;
             border-radius: 10px;
             transform: translate(-50%, -50%);
             background-color: rgba(0, 0, 0, .1);
